<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weighted Calc</string>

    <string name="label">Label</string>
    <string name="percent_weight">Weight</string>
    <string name="student_mark">Mark</string>
    <string name="total_marks">Total</string>
    <string name="slash">/</string>
    <string name="percent">%</string>
    <string name="finalPercent">Final</string>
    <string name="calculate">Calculate</string>

    <string name="add">Add</string>

    <string name="reset">Reset</string>
    <string name="remove_description">Remove</string>
    <string name="reset_title">Reset?</string>
    <string name="cancel">Cancel</string>
    <string name="reset_message">All fields will be erased.</string>

    <string name="about">About</string>
    <string name="about_title">Weighted Calculator\n by TranBrian10</string>
    <string name="about_version">Version 1.0.3</string>
    <string name="about_blurb">Thank you for downloading Weighted Calculator!
        The source code is available at the GitHub link below.\n
        \nWith the Weighted Calculator, you can calculate a weighted average or calculate the mark you need for the final grade you want.</string>
    <string name="website">Website</string>
    <string name="github">GitHub Repository</string>
    <string name="rate">Rate this app</string>
    <string name="close">Close</string>
    <string name="about_copyright">Copyright © 2018</string>

    <string name="help">Help</string>
    <string name="help_content"><b>Calculate a Weighted Average</b>
        \nFill in all fields, but leave the final mark empty, and hit the <i>Calculate</i> button to get a weighted average.

        \n\n<b>Reverse Calculate a Mark</b>
        \nFill in all fields, including the final mark, and leave one <i>Mark</i> field empty.
        Hit the <i>Calculate</i> button to get the mark you need for the final average you want.

        \n\n<b>Auto-save</b>
        \nYour marks will automatically be saved when you exit the app. Press <i>Reset</i> to clear all marks.

        \n\n<b>Precision</b>
        \nAll calculations are rounded to two decimal places.
    </string>

    <string name="weighting_alert_toast">Please fill in all weightings</string>
    <string name="mark_final_alert_toast">Please fill in all marks or the final grade</string>
    <string name="total_alert_toast">Please fill in all totals</string>
    <string name="total_zero_toast">Totals cannot be zero</string>
    <string name="double_parsing_error_toast">Could not parse numbers. Your locale may not be supported.</string>
    <string name="decimal_separator_error_toast">Please use only one decimal separator in a number</string>

    <!-- Internal -->
    <string name="allowable_digits">0123456789.,</string>
</resources>
