<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_plus_white_48dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_reset"
        android:title="@string/reset"
        android:icon="@drawable/ic_file_white_48dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
