<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_popup"
    android:background="#50000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@color/accent"
        android:id="@+id/help_scroll">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/popup_side_padding"
            android:paddingLeft="@dimen/popup_side_padding">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/help"
                android:id="@+id/help_title"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/popup_title_top_padding"
                android:gravity="center"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/help_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/help_content"
                android:id="@+id/help_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/popup_blurb_top_padding"
                android:paddingBottom="@dimen/popup_blurb_bottom_padding"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/help_content"
                android:text="@string/close"
                android:id="@+id/btn_close"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>