<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:id="@+id/no_focus">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/capsules_scroll"
        android:layout_above="@+id/calculateBar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/capsules"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:animateLayoutChanges="true">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/calculateBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/calculate_top_margin"
        android:paddingBottom="@dimen/calculate_bottom_margin"
        android:background="@drawable/background_with_shadow"
        android:weightSum="1">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:ems="10"
            android:id="@+id/final_mark"
            android:hint="@string/finalPercent"
            android:textIsSelectable="false"
            android:imeOptions="actionDone"
            android:layout_weight="0.30"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/percent"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:gravity="bottom"
            android:layout_weight="0.30"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/btnCalculate"
            android:layout_weight="0.4"
            android:focusable="true"/>
    </LinearLayout>

</RelativeLayout>
